Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/InstanceOf3.out
InstanceOf3.java:12:32: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.reifiable.types.instanceof), 15, 16
1 error
